ChatApp logging started, needs formatting

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	runtime('mysql:mysql-connector-java')
 	compile 'org.postgresql:postgresql:42.1.4'
+	compile 'org.springframework.boot:spring-boot-starter-actuator:1.5.8.RELEASE'
+	compile 'org.hibernate:hibernate-core:5.2.12.Final'
+	compile 'org.hibernate:hibernate-entitymanager:5.2.12.Final'
 
 }
