--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/chatappold?useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=dbpass
+spring.datasource.url=${URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.logging.level.org.hibernate.SQL=debug
